# Structural-Masking-Detection

./: README.md
benchmarks/pvbench/San2Patch/: pyproject.toml
benchmarks/pvbench/San2Patch/san2patch/: consts.py  context.py  internal_error.py  types.py
benchmarks/pvbench/San2Patch/san2patch/dataset/: base_dataset.py
benchmarks/pvbench/San2Patch/san2patch/dataset/reproducer/: reproducer.py
benchmarks/pvbench/San2Patch/san2patch/dataset/test/: __init__.py  final_dataset.py  san2patch_dataset.py
benchmarks/pvbench/San2Patch/san2patch/patching/: patcher.py  validator.py
benchmarks/pvbench/San2Patch/san2patch/patching/context/: code_context.py
benchmarks/pvbench/San2Patch/san2patch/patching/graph/: comprehend_graph.py  howtofix_graph.py  patching_graph.py  runpatch_graph.py  wheretofix_graph.py
benchmarks/pvbench/San2Patch/san2patch/patching/graph/ablation/cot/: comprehend_graph.py  howtofix_graph.py  patching_graph.py  runpatch_graph.py  wheretofix_graph.py
benchmarks/pvbench/San2Patch/san2patch/patching/graph/ablation/no_comprehend/: howtofix_graph.py  patching_graph.py  runpatch_graph.py  wheretofix_graph.py
benchmarks/pvbench/San2Patch/san2patch/patching/graph/ablation/no_context/: patching_graph.py
benchmarks/pvbench/San2Patch/san2patch/patching/llm/: anthropic_llm_patcher.py  base_llm_patcher.py  google_llm_patcher.py  openai_llm_patcher.py
benchmarks/pvbench/San2Patch/san2patch/patching/prompt/: base_prompts.py  eval_prompts.py  patch_prompts.py
benchmarks/pvbench/San2Patch/san2patch/patching/prompt/templates/: basic_system.jinja2
benchmarks/pvbench/San2Patch/san2patch/utils/: cmd.py  decorators.py  docker.py  enum.py  jinja.py  langsmith.py  logger.py  reducers.py
(+9737 files in other folders)
