[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "san2patch"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.13"
authors = [
  { name = "acorn421", email = "acorn421@gmail.com" },
]
dependencies = [
  "openai~=1.88.0",
  "numpy~=2.2.6",
  "multidict~=6.4.4",
  "marshmallow~=3.26.0",
  "langchain~=0.3.14",
  "langgraph~=0.2.75",
  "langgraph-sdk~=0.1.69",
  "langgraph-checkpoint~=2.0.26",
  "msgpack~=1.1.1",
  "langchain-anthropic~=0.3.3",
  "langchain-google-genai~=2.0.9",
  "langchain-openai~=0.3.23",
  "click~=8.1.8",
  "psutil~=6.1.1",
  "aim~=3.27.0",
  "python-dotenv~=1.0.1",
  "rich~=13.9.4",
  "coloredlogs~=15.0.1",
  "peewee~=3.17.8",
  "pyyaml~=6.0.2",
  "oauth2client~=4.1.3",
  "apiclient~=1.0.4",
  "google-api-python-client~=2.159.0",
  "google-auth-oauthlib~=1.2.1",
  "tiktoken~=0.8.0",
  "tree-sitter==0.24.0",
  "tree-sitter-c==0.23.4",
  "tree-sitter-java~=0.23.5",
  "pydantic~=2.10.5",
  "jinja2~=3.1.5",
  "pygithub~=2.5.0",
  "langchain-experimental~=0.3.4",
  "unidiff~=0.7.5",
  "textdistance~=4.6.3",
  "langchain-chroma~=0.2.0",
  "ghapi~=1.0.6",
  "opentelemetry-exporter-otlp-proto-grpc~=1.29.0",
  # "grpcio-status~=1.72.1",
  "langchain-milvus~=0.1.9",
  "xmltodict~=0.14.2",
  "networkx~=3.4.2",
  "matplotlib~=3.10.0",
  "pydot~=3.0.4",
  "art~=6.4",
  "deepdiff~=8.1.1",
  "dicttoxml~=1.7.16",
]

[project.optional-dependencies]
dev = [
  "ruff~=0.11.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["san2patch*",]

[tool.ruff]
ignore = ["F403", "F405"]


